@@ -1,5 +1,9 @@
 2008-09-08  Andreas K. Foerster  <info@akfoerster.de>
 
+	* avtterm.c (reset_terminal):
+	new function
+	(escape_sequence, process_subprogram): adapted
+
 	* avatar.c (check_auto_margin):
 	new function
 	(avt_forward, avt_put_character): adapted
